--- a/src/main/resources/javafx/applicant_detail.fxml
+++ b/src/main/resources/javafx/applicant_detail.fxml
@@ -30,7 +30,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <GridPane layoutX="20.0" layoutY="97.0" prefHeight="152.0" prefWidth="233.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0">
+                  <GridPane layoutX="20.0" layoutY="97.0" prefHeight="170.0" prefWidth="630.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -40,6 +40,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
@@ -123,10 +124,26 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
+                        <Label text="Estado" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="stateLabel" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="5.0" />
+                           </GridPane.margin>
+                        </Label>
                      </children>
                   </GridPane>
-                  <Button fx:id="viewCvBtn" layoutX="28.0" layoutY="249.0" mnemonicParsing="false" onAction="#handleButtonPressed" text="Ver Hoja de Vida" AnchorPane.leftAnchor="30.0" />
-                  <HBox alignment="CENTER" layoutX="30.0" layoutY="275.0" prefHeight="34.0" prefWidth="216.0" spacing="15.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+                  <Button fx:id="viewCvBtn" layoutX="30.0" layoutY="267.0" mnemonicParsing="false" onAction="#handleButtonPressed" text="Ver Hoja de Vida" AnchorPane.leftAnchor="30.0" />
+                  <HBox alignment="CENTER" layoutX="30.0" layoutY="302.0" prefHeight="34.0" prefWidth="216.0" spacing="15.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
                      <children>
                         <Button fx:id="acceptBtn" mnemonicParsing="false" onAction="#handleButtonPressed" text="Aceptar" />
                         <Button fx:id="rejectBtn" mnemonicParsing="false" onAction="#handleButtonPressed" text="Rechazar" />
